@@ -1,3 +1,4 @@
+SSDM 0.1.9007 load_occ porr data load improvement (occ not in spatial extent + less than 3 occ)
 SSDM 0.1.9006 ShinyApp structure in inst and shinyFiles working
 SSDM 0.1.9005 All inputs changed with shinyFiles package + Pcol text + Description (gui and pkg doc)
 SSDM 0.1.9004 Previous model input change (windows comptibilty)
